--- a/module_4/bai_tap/src/main/java/case_study/case_study/src/main/resources/templates/customer/add.html
+++ b/module_4/bai_tap/src/main/java/case_study/case_study/src/main/resources/templates/customer/add.html
@@ -10,61 +10,64 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<form method="post" th:object="${customerList}">
-    <div class="mb-5 mt-3 text-center fst-italic">
-        <h1>Add New Customer Form</h1>
-    </div>
-    <div class="mb-3">
-        <label for="nameCustomer" class="form-label fw-bold fst-italic">Name Customer:</label>
-        <input th:field="*{name}" type="text" class="form-control" id="nameCustomer" aria-describedby="nameError">
-        <p style="color: red" th:errors="*{name}" th:if="${#fields.hasErrors('name')}"></p>
-    </div>
-    <div class="mb-3">
-        <label for="birthDay" class="form-label fw-bold fst-italic"> birthDay:</label>
-        <input th:field="*{birthDay}" type="text" class="form-control" id="birthDay" aria-describedby="nameError">
-        <p style="color: red" th:errors="*{birthDay}" th:if="${#fields.hasErrors('birthDay')}"></p>
-    </div>
-    <div class="mb-3">
-        <label for="genderCustomer" class="form-label fw-bold fst-italic">Gender:</label>
-        <select th:field="*{gender}" id="genderCustomer" class="form-select" aria-label="Default select example">
-            <option value="0">Female</option>
-            <option value="1">Male</option>
-            <option value="2">LGBT</option>
-        </select>
-        <p style="color: red" th:errors="*{gender}" th:if="${#fields.hasErrors('gender')}"></p>
-    </div>
-    <div class="mb-3">
-        <label for="idCard" class="form-label fw-bold fst-italic">idCard :</label>
-        <input th:field="*{idCard}" type="text" class="form-control" id="idCard" aria-describedby="nameError">
-        <p style="color: red" th:errors="*{idCard}" th:if="${#fields.hasErrors('idCard')}"></p>
-    </div>
-    <div class="mb-3">
-        <label for="phoneNumber" class="form-label fw-bold fst-italic">phoneNumber :</label>
-        <input th:field="*{phoneNumber}" type="text" class="form-control" id="phoneNumber" aria-describedby="nameError">
-        <p style="color: red" th:errors="*{phoneNumber}" th:if="${#fields.hasErrors('phoneNumber')}"></p>
-    </div>
-    <div class="mb-3">
-        <label for="email" class="form-label fw-bold fst-italic">email :</label>
-        <input th:field="*{email}" type="text" class="form-control" id="email" aria-describedby="nameError">
-        <p style="color: red" th:errors="*{email}" th:if="${#fields.hasErrors('email')}"></p>
-    </div>
-    <div class="mb-3">
-        <label for="address" class="form-label fw-bold fst-italic">address :</label>
-        <input th:field="*{address}" type="text" class="form-control" id="address" aria-describedby="nameError">
-        <p style="color: red" th:errors="*{address}" th:if="${#fields.hasErrors('address')}"></p>
-    </div>
-    <div class="mb-3">
-        <label for="customerType" class="form-label fw-bold fst-italic">Customer Type:</label>
-        <select th:field="*{customerTypeId}" id="customerType" class="form-select" aria-label="Default select example">
-            <option th:each="item : ${customerTypes}"
-                    th:value="${item.id}"
-                    th:text="${item.name}">
-            </option>
-        </select>
-        <p style="color: red" th:errors="*{customerTypeId}" th:if="${#fields.hasErrors('customerTypeId')}"></p>
-    </div>
-    <button type="submit" class="btn btn-primary mb-3 w-100">Add New Customer</button>
-</form>
-</form>
+<center>
+    <form method="post"  th:object="${customerList}" style="width: 30%; height: 50%" >
+        <div class="mb-5 mt-3 text-center fst-italic">
+            <h1>Add New Customer Form</h1>
+        </div>
+        <div class="mb-3">
+            <label for="nameCustomer" class="form-label fw-bold fst-italic" style="background: aqua">Name Customer:</label>
+            <input th:field="*{name}" type="text" class="form-control" id="nameCustomer" aria-describedby="nameError">
+            <p style="color: red" th:errors="*{name}" th:if="${#fields.hasErrors('name')}"></p>
+        </div>
+        <div class="mb-3">
+            <label for="dateOfBirth" style="background: orange" class="form-label fw-bold fst-italic"> dateOfBirth:</label>
+            <input th:field="*{dateOfBirth}" type="text" class="form-control" id="dateOfBirth" aria-describedby="nameError">
+            <p style="color: red" th:errors="*{dateOfBirth}" th:if="${#fields.hasErrors('dateOfBirth')}"></p>
+        </div>
+        <div class="mb-3">
+            <label for="genderCustomer" style="background: beige" class="form-label fw-bold fst-italic">Gender:</label>
+            <select th:field="*{gender}" id="genderCustomer" class="form-select" aria-label="Default select example">
+                <option value="0">Female</option>
+                <option value="1">Male</option>
+                <option value="2">LGBT</option>
+            </select>
+            <p style="color: red" th:errors="*{gender}" th:if="${#fields.hasErrors('gender')}"></p>
+        </div>
+        <div class="mb-3">
+            <label for="idCard" style="background: aquamarine" class="form-label fw-bold fst-italic">idCard :</label>
+            <input th:field="*{idCard}" type="text" class="form-control" id="idCard" aria-describedby="nameError">
+            <p style="color: red" th:errors="*{idCard}" th:if="${#fields.hasErrors('idCard')}"></p>
+        </div>
+        <div class="mb-3">
+            <label for="phoneNumber" style="background: blanchedalmond" class="form-label fw-bold fst-italic">phoneNumber :</label>
+            <input th:field="*{phoneNumber}" type="text" class="form-control" id="phoneNumber" aria-describedby="nameError">
+            <p style="color: red" th:errors="*{phoneNumber}" th:if="${#fields.hasErrors('phoneNumber')}"></p>
+        </div>
+        <div class="mb-3">
+            <label for="email" class="form-label fw-bold fst-italic" style="background: burlywood">email :</label>
+            <input th:field="*{email}" type="text" class="form-control" id="email" aria-describedby="nameError">
+            <p style="color: red" th:errors="*{email}" th:if="${#fields.hasErrors('email')}"></p>
+        </div>
+        <div class="mb-3">
+            <label for="address" class="form-label fw-bold fst-italic" style="background: chartreuse">address :</label>
+            <input th:field="*{address}" type="text" class="form-control" id="address" aria-describedby="nameError">
+            <p style="color: red" th:errors="*{address}" th:if="${#fields.hasErrors('address')}"></p>
+        </div>
+        <div class="mb-3">
+            <label for="customerType" class="form-label fw-bold fst-italic" style="background: darkgray">Customer Type:</label>
+            <select th:field="*{customerTypeId}" id="customerType" class="form-select" aria-label="Default select example">
+                <option th:each="item : ${customerTypes}"
+                        th:value="${item.id}"
+                        th:text="${item.name}">
+                </option>
+            </select>
+            <p style="color: red" th:errors="*{customerTypeId}" th:if="${#fields.hasErrors('customerTypeId')}"></p>
+        </div>
+        <button type="submit" class="btn btn-info mb-3 w30">Add New Customer</button>
+    </form>
+    </form>
+</center>
+
 </body>
 </html>
