--- a/module_4/bai_tap/src/main/java/case_study/case_study/src/main/resources/templates/customer/edit.html
+++ b/module_4/bai_tap/src/main/java/case_study/case_study/src/main/resources/templates/customer/edit.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>create customer</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script></head>
 <body>
 <a href="/customer">Back to customer list</a>
 <div style="text-align: center">
@@ -25,8 +28,8 @@
         </tr>
         <tr>
             <td>Date Of Birth :</td>
-            <td><input type="date" th:field="*{birthDay}"></td>
-            <td style="color: red" th:errors="*{birthDay}" th:if="${#fields.hasErrors('birthDay')}"></td>
+            <td><input type="date" th:field="*{dateOfBirth}"></td>
+            <td style="color: red" th:errors="*{dateOfBirth}" th:if="${#fields.hasErrors('dateOfBirth')}"></td>
         </tr>
         <tr>
             <td>Gender :</td>
