--- a/module_4/bai_tap/src/main/java/case_study/case_study/src/main/resources/templates/customer/list.html
+++ b/module_4/bai_tap/src/main/java/case_study/case_study/src/main/resources/templates/customer/list.html
@@ -5,27 +5,81 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
+    <title></title>
+    <link rel="stylesheet" href="/file_css/index.css">
+    <link rel="stylesheet" href="/file_css/reset.css">
 </head>
-<body>
+<body class="d-flex flex-column">
+<section class="header d-flex justify-content-center">
+    <div class="wrapper d-flex justify-content-between align-items-center">
+        <a href="/pages"><img class="header__logo" src="./images/frf.png" style="margin-left: -18px"/></a>
+        <div class="header__contact d-flex">
+            <div class="address flex-fill">
+                <div class="d-flex">
+                    <img src="./images/map.svg" alt="" class="me-5"/>
+                    <div class="d-flex flex-column">
+                        <p class="mb-3">103 - 105 Vo Nguyen Giap Street, Khue My Ward, Ngu Hanh Son District, Danang
+                            City, Vietnam</p>
+                        <p class="fs-4"><span class="fs-4">7,0 km from Danang Airport</span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="phone-email flex-fill">
+                <div class="d-flex align-items-center mb-3">
+                    <img src="./images/telephone.svg" class="me-4" alt="">
+                    <span class="fs-4 text-dark">84-236-3847 333/888</span>
+                </div>
+                <div class="d-flex align-items-center">
+                    <img src="./images/envelope.svg" class="me-4" alt="">
+                    <span class="fs-4 text-dark">reservation@furamavietnam.com</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="navbar d-flex justify-content-center" id="navbar">
+    <div class="wrapper h-100 d-flex" style="margin-left: 95px">
+        <ul class="list d-flex text-bg-light">
+            <li class="list__item d-flex justify-content-center align-items-center">
+                <a href="/pages">Home</a>
+            </li>
+            <li class="list__item d-flex justify-content-center align-items-center">
+                <a href="/employees">Employee</a>
+
+            </li>
+            <li class="list__item d-flex justify-content-center align-items-center"><a href="/customer">Customer</a>
+            </li>
+            <li class="list__item d-flex justify-content-center align-items-center"><a href="/facility">Service</a>
+            </li>
+            <li class="list__item d-flex justify-content-center align-items-center"><a href="#">Contract</a></li>
+        </ul>
+    </div>
+</section>
+
 <div style="text-align: center">
     <th:block th:if="${message}">
         <p style="color: red;font-weight: bold" th:text="${message}"></p>
     </th:block>
 </div>
 <div>
-    <form action="/customer">
-        <input type="text" name="searchName "  placeholder="Search name">
-        <input type="submit" value="Search">
+
+    <form action="/customer" style="background: #046056">
+        <input type="text" name="searchName "  placeholder="Search name" style="height: 50px" width="50px">
+        <input type="submit" value="Search" style="height: 50px">
     </form>
-    <button><a href="/add">Add Customer</a></button>
+    <center style="background: #046056">
+        <button type="button" class="btn btn-info" style="width: 60px"   ><a href="/customer/add" >Add Customer</a></button>
+    </center>
 
 </div>
-<div class="body-mid">
+<div class="container" style="background: #046056">
     <div class="body-mid-right">
-        <table class="table table-white" style="text-align: center" border="1">
+        <table class="table table-dark table-striped" border="2">
             <thead>
             <tr>
                 <th>STT</th>
@@ -46,7 +100,7 @@
                 <td th:text="${stt.count}"></td>
                 <td th:text="${data.customerTypeId.name}"></td>
                 <td th:text="${data.name}"></td>
-                <td th:text="${data.birthDay}"></td>
+                <td th:text="${data.dateOfBirth}"></td>
                 <td th:text="${data.gender}"></td>
                 <td th:text="${data.idCard}"></td>
                 <td th:text="${data.phoneNumber}"></td>
