--- a/module_4/bai_tap/src/main/java/case_study/case_study/src/main/resources/templates/contract/list.html
+++ b/module_4/bai_tap/src/main/java/case_study/case_study/src/main/resources/templates/contract/list.html
@@ -177,6 +177,78 @@
         </div>
     </div>
 </div>
+<div class="modal fade" id="addContractdetail" tabindex="-1" aria-labelledby="exampleModalLabel1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form class="border border-2 border-success p-3 rounded formCSS"
+                  th:action="@{/contracts/add-contract-detail}"
+                  th:object="${contractDetailDto}" method="POST">
+                <div class="modal-header">
+                    <h3 class="modal-title fw-bold text-primary" id="exampleModalLabel4">THÊM DỊCH VỤ ĐI KÈM</h3>
+                    <button id="closeModal2" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+
+                <div class="modal-body">
+                    <div class="form-group">
+                        <input type="hidden" name="contractId" id="contractId" th:field="*{contract}"
+                               readonly/>
+
+                        <div class="form-group">
+                            <label class="h6" for="attachFacility">Name Attach Facility:</label>
+                            <div class="input-group">
+                                <select id="attachFacility" class="form-select"
+                                        th:field="*{attachFacility}">
+                                    <option th:each="item : ${attachFacilityList}" th:value="${item.id}"
+                                            th:text="${item.name + ' (₫ ' + item.cost + ')'}"></option>
+                                </select>
+                                <span class="input-group-text"><i class="fa-solid fa-file-signature"></i></span>
+                            </div>
+                        </div>
+
+                        <div class="mt-3 form-group">
+                            <label for="quantity" class="h6">Amounts:</label>
+                            <div class="input-group">
+                                <input type="number" id="quantity" class="form-control"
+                                       placeholder="Nhập số lượng..." th:field="*{quantity}" >
+                                <span style="color: red" th:errors="*{quantity}" th:if="${#fields.hasErrors('quantity')}"></span>
+                                <input hidden id=checkQuantity type="text" th:if="${#fields.hasErrors('quantity')}" value="quantity">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+                        <button type="submit" class="btn btn-success" value="delete">Lưu</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="showAttachDetail" tabindex="-1" aria-labelledby="exampleModalLabel1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content modalCSS">
+            <div class="modal-header">
+                <h4 class="modal-title text-center" id="exampleModalLabel2">LIST ATTACH FACILITIES</h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+
+            <div class="modal-body">
+                <table id="showAttach"></table>
+
+                <div class="h5 text-danger text-center" id="note">
+                    NOT HAVE ANY THINGS!
+                </div>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
@@ -202,6 +274,42 @@
                 $('#addContractdetail').modal('show');
             }
     });
+
+    function addContractdetail(id) {
+        document.getElementById("contractId").value = id;
+    }
+
+    function showAttachDetail(id) {
+        $("#showAttach").empty();
+        $("#note").show();
+        $.ajax({
+            url: "http://localhost:8080/api/contracts/v1/" + id,
+            type: "GET",
+            dataType: "json",
+            success: function (data) {
+                if (data.length > 0) {
+                    $("#note").hide();
+                    let tr = [];
+
+                    tr.push("<tr>");
+                    tr.push("<th>" + "ATTACH FACILITY" + "</th>");
+                    tr.push("<th class='px-5'>" + "Units" + "</th>");
+                    tr.push("<th class='text-center'>" + "Amounts" + "</th>");
+                    tr.push("</tr>");
+
+                    for (let i = 0; i < data.length; i++) {
+                        tr.push("<tr>");
+                        tr.push("<td class='text-primary h6'>" + data[i].nameDto + "</td>");
+                        tr.push("<td class='text-primary px-5'>" + data[i].unitDto + "</td>");
+                        tr.push("<td class='text-primary text-center'>" + data[i].quantityDto + "</td>");
+                        tr.push("</tr>");
+                    }
+                    $("#showAttach").append(tr.join(""));
+
+                }
+            }
+        })
+    }
     </script>
 
 </html>
